--- a/docs/css/jekyll.css
+++ b/docs/css/jekyll.css
@@ -40,3 +40,11 @@
 ul > li > label + div {
   margin-left: 15px;
 }
+
+/* pour assistant-freebox */
+.assistant-freebox > ul > li > p {
+  margin-bottom: 0;
+}
+.assistant-freebox > ul > li {
+  margin-top: 15px;
+}
