--- a/docs/css/jekyll.css
+++ b/docs/css/jekyll.css
@@ -54,3 +54,10 @@ ul > li > label + div {
 #contenu.freebox #utilisation + p + p + ul > li code::after,#contenu.livebox #utilisation + p + p + ul > li code::after {
   content: ' »';
 }
+
+/* important message */
+pre.important {
+  background-color: #ffc0cb66;
+  border-color: pink;
+  font-family: inherit;
+}
